# ResearchInfra

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agents.md  architecture.md  cli.md  concepts.md  development.md  schemas.md  skills.md  workspace.md
examples/data-centric-mllm/: README.md
examples/data-centric-mllm/.researchinfra/: workspace.yaml
examples/data-centric-mllm/experiments/: README.md
examples/data-centric-mllm/figures/: README.md
examples/data-centric-mllm/memory/: README.md
examples/data-centric-mllm/sources/: README.md
examples/v1-loop/: README.md
examples/v1-loop/.researchinfra/: sources.yaml  workspace.yaml
examples/v1-loop/sources/: demo-source.md
examples/vla-world-model/: README.md
examples/vla-world-model/.researchinfra/: workspace.yaml
examples/vla-world-model/agents/: README.md
examples/vla-world-model/docs/: README.md
examples/vla-world-model/drafts/: README.md
examples/vla-world-model/runs/: README.md
examples/vla-world-model/skills/: README.md
examples/vla-world-model/sources/: README.md
examples/vla-world-model/submissions/: README.md
examples/vla-world-model/templates/: README.md
src/researchinfra/: __init__.py  __main__.py  cards.py  claims.py  cli.py  discovery.py  documents.py  model_registry.py  readings.py  results.py  schemas.py  skills.py  sources.py  submission.py  workflows.py  workspace.py  workspace_files.py
src/researchinfra/agents/: __init__.py  (+2 more)
tests/: test_cards.py  test_cli.py  test_discovery.py  test_documents.py  test_model_provider.py  test_release_blockers.py  test_release_hardening.py  test_schemas.py  test_skills.py  test_sources.py  test_v1_loop.py  test_workspace.py
(+38 files in other folders)
