[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchinfra"
version = "0.1.0"
description = "A file-first, AI-native research operating system for human and agent research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ResearchInfra contributors" }
]
keywords = [
  "research",
  "ai",
  "experiments",
  "agents",
  "papers",
  "reproducibility"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<1"
]

[project.scripts]
researchinfra = "researchinfra.cli:main"

[project.urls]
Homepage = "https://github.com/researchinfra/researchinfra"
Issues = "https://github.com/researchinfra/researchinfra/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
researchinfra = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers"
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
